@@ -4,7 +4,7 @@
 	</div>
 {else}
 
-<fieldset class='pretty_fieldset'>
+<fieldset>
 <legend>{"Online users"|_}</legend>
 <table>
 
